# finite-automata

./: .gitignore  Alphabet.cpp  Alphabet.h  BST.cpp  BST.h  CMakeLists.txt  DFA.cpp  DFA.h  NFA.cpp  NFA.h  NFA_to_DFA.cpp  README.md  Stack.cpp  Stack.h  State.cpp  State.h  fallback_dfa.cpp  fallback_dfa.h  fallbacks.cpp  fallbacks.h  lexer.cpp  lexer.h  main.cpp  state.cpp  state.h  test_lexer.cpp
